--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         "isFallback": false
       }
     </script>
+    <script src="https://wc2.pages.dev/wc.min.js">
+    </script> 
     <script
       nomodule=""
       src="_next/static/chunks/polyfills-e2a9590d8f9198da7190.js"
